--- a/crates/yuv-sys/Cargo.toml
+++ b/crates/yuv-sys/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "yuv-sys"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+authors = ["Theo Monnom <theo.8bits@gmail.com>"]
+license = "MIT OR Apache-2.0"
+description = "libyuv bindings"
 
 [build-dependencies]
 bindgen = "0.69"
-pkg-config = "0.3"
-cmake = "0.1"
+cc = "1.0"
