--- a/crates/yuv-sys/Cargo.toml
+++ b/crates/yuv-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yuv-sys"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 authors = ["Theo Monnom <theo.8bits@gmail.com>"]
 license = "MIT OR Apache-2.0"
@@ -9,3 +9,4 @@ description = "libyuv bindings"
 [build-dependencies]
 bindgen = "0.69"
 cc = "1.0"
+regex = "1"
